--- a/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
@@ -68,6 +68,7 @@
     <relatedLists>
         <fields>NAME</fields>
         <fields>Status__c</fields>
+        <fields>Changed_Date__c</fields>
         <fields>CREATEDBY_USER</fields>
         <relatedList>PSE_Status_History__c.PSE__c</relatedList>
     </relatedLists>
@@ -77,7 +78,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h56000000dMqN</masterLabel>
+        <masterLabel>00h3D000000hULL</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
