--- a/force-app/main/default/aura/MyTeam/MyTeam.css
+++ b/force-app/main/default/aura/MyTeam/MyTeam.css
@@ -7,6 +7,20 @@
 .THIS .mt-panel{
     background: #FFFFFF;
 }
+.THIS .modal-text{
+    text-align: center;
+    width: 320px;
+    height: 51px;
+}
+.THIS .modal-button{
+    width: 50%;
+    margin-bottom: 19px;
+}
+.THIS .modal-header{
+    color: #FFFFFF;
+    font-size: 15px;
+    background: linear-gradient(306.04deg, #0076AE 0%, #250056 100%);
+}
 .THIS .delegate-info-table-container{
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
@@ -35,7 +49,6 @@
     }
 
 }
-
 .THIS .empty-list {
     margin: auto;
     width: 50%;
