--- a/unpackaged/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
@@ -55,6 +55,10 @@
                 <behavior>Edit</behavior>
                 <field>HCP_Opt_In_Referral_Status_Emails__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Delegate_Opt_In_Status_Emails__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
