--- a/unpackaged/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Contact-IQVIA Contact Layout.layout-meta.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
+    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -255,10 +256,9 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <fields>Country_Code__c</fields>
+        <fields>Country__c</fields>
+        <fields>State__c</fields>
         <relatedList>National_ID__c.Contact__c</relatedList>
-        <sortField>Country_Code__c</sortField>
-        <sortOrder>Asc</sortOrder>
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
@@ -289,7 +289,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h11000000wNX7</masterLabel>
+        <masterLabel>00h9E000000lik4</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
