--- a/force-app/main/default/aura/StudyListView/StudyListView.css
+++ b/force-app/main/default/aura/StudyListView/StudyListView.css
@@ -1,6 +1,7 @@
-.THIS{
+.THIS {
     font-size: 13px;
 }
+
 .THIS .slv-category {
     color: #000000;
     font-weight: 600;
@@ -10,6 +11,28 @@
     text-transform: uppercase;
 }
 
-.THIS.slv-items-panel{
+.THIS.slv-items-panel {
     padding-bottom: 100px;
+}
+
+.THIS .rr-simple-white-panel {
+    box-sizing: border-box;
+    height: 72px;
+    width: 100%;
+    border: 1px solid #F2F2F2;
+    border-radius: 5px;
+    background-color: #FFFFFF;
+    margin-bottom: 30px;
+    margin-top: 0;
+}
+
+.THIS .header-white-panel {
+    color: #666666;
+    font-family: "Proxima Nova";
+    font-size: 20px;
+    line-height: 26px;
+}
+
+.THIS .search-more-btn {
+    width: 445px;
 }
