--- a/force-app/main/default/aura/PatientDelegateItem/PatientDelegateItem.cmp
+++ b/force-app/main/default/aura/PatientDelegateItem/PatientDelegateItem.cmp
@@ -6,13 +6,15 @@
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
                   scripts="{!join(',', $Resource.rr_community_js)}"/>
 
-    <!-- arrtibutes: -->
+    <!-- attributes: -->
     <aura:attribute name="delegate" type="Object" required="true"/>
     <aura:attribute name="parentComponent" type="Aura.Component" description="need to refresh parent"/>
     <aura:attribute name="showSpinner" type="Boolean" default="false" access="private"/>
 
+    <!-- methods: -->
     <aura:method name="removeClick" action="{!c.doRemove}" access="public"/>
 
+    <!-- component body:-->
     <div class="rr-white-panel mti-container">
         <c:RRSpinner aura:id="mainSpinner" size="medium" showSpinner="{!v.showSpinner}"/>
         <div class="mti-name">
@@ -27,7 +29,7 @@
                     title="{!$Label.c.Button_Edit_Details}">
                 {!$Label.c.Button_Edit_Details}
             </button>
-            <button class="apollo-btn tertiary" onclick="{!c.showModale}"
+            <button class="apollo-btn tertiary" onclick="{!c.doRemove}"
                     title="{!$Label.c.Button_Remove}">
                 {!$Label.c.Button_Remove}
             </button>
